@@ -7,21 +7,31 @@ import javax.swing.JMenuBar;
 import javax.swing.JMenuItem;
 import javax.swing.JRadioButtonMenuItem;
 import javax.swing.KeyStroke;
-import javax.swing.SwingUtilities;
 import javax.swing.UIManager;
 import javax.swing.filechooser.FileNameExtensionFilter;
-import java.awt.Toolkit;
-import java.awt.Window;
+import java.awt.GraphicsEnvironment;
 import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
-import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.util.Arrays;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.function.Consumer;
+
+import static com.diosaraiva.archutils.ui.SwingUtils.menuItem;
+import static com.diosaraiva.archutils.ui.SwingUtils.menuShortcut;
 
 /**
  * Factory that builds the application menu bar.
  */
 public final class MenuBarFactory {
+
+    /** Font families offered in Settings, filtered to those actually installed. */
+    private static final List<String> FONT_CHOICES = List.of(
+            "Dialog", "SansSerif", "Serif", "Monospaced",
+            "Arial", "Helvetica", "Verdana", "Tahoma",
+            "Times New Roman", "Courier New", "Menlo", "Consolas");
 
     private MenuBarFactory() { }
 
@@ -36,20 +46,10 @@ public final class MenuBarFactory {
     }
 
     private static JMenu createFileMenu(MainFrame frame) {
-        JMenu menu = new JMenu("File");
-        menu.setMnemonic(KeyEvent.VK_F);
-
-        JMenuItem open = new JMenuItem("Open");
-        open.setMnemonic(KeyEvent.VK_O);
-        open.addActionListener(e -> onOpenFile(frame));
-        menu.add(open);
-
+        JMenu menu = menu("File", KeyEvent.VK_F);
+        menu.add(menuItem("Open", KeyEvent.VK_O, null, e -> onOpenFile(frame)));
         menu.addSeparator();
-
-        JMenuItem quit = new JMenuItem("Quit");
-        quit.setMnemonic(KeyEvent.VK_Q);
-        quit.addActionListener(e -> System.exit(0));
-        menu.add(quit);
+        menu.add(menuItem("Quit", KeyEvent.VK_Q, null, e -> System.exit(0)));
         return menu;
     }
 
@@ -57,130 +57,147 @@ public final class MenuBarFactory {
         JFileChooser chooser = new JFileChooser();
         chooser.setDialogTitle("Open PlantUML File");
         chooser.setFileFilter(new FileNameExtensionFilter("PlantUML files (*.puml)", "puml"));
-        if (chooser.showOpenDialog(frame) == JFileChooser.APPROVE_OPTION) {
-            File file = chooser.getSelectedFile();
-            try {
-                String content = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
-                frame.showPanel(frame.getPlantUmlPanel());
-                frame.getPlantUmlPanel().getInputPanel().setCode(content);
-            } catch (Exception ex) {
-                javax.swing.JOptionPane.showMessageDialog(frame,
-                        "Failed to open file: " + ex.getMessage(),
-                        "Error", javax.swing.JOptionPane.ERROR_MESSAGE);
-            }
+        if (chooser.showOpenDialog(frame) != JFileChooser.APPROVE_OPTION) {
+            return;
+        }
+        try {
+            String content = Files.readString(chooser.getSelectedFile().toPath());
+            frame.showPanel(frame.getPlantUmlPanel());
+            frame.getPlantUmlPanel().getInputPanel().setCode(content);
+        } catch (Exception ex) {
+            SwingUtils.showError(frame, "Failed to open file: " + ex.getMessage());
         }
     }
 
     /**
-     * Builds the Edit menu (Undo / Redo / Copy to Clipboard) wired to the
-     * PlantUML input editor. Undo and Redo items enable and disable
-     * dynamically based on the editor's undo history.
+     * Builds the Edit menu (Undo / Redo / Copy Text / Copy Image / Paste) wired
+     * to the PlantUML editor. Undo and Redo enable and disable dynamically.
      */
     private static JMenu createEditMenu(MainFrame frame) {
-        JMenu menu = new JMenu("Edit");
-        menu.setMnemonic(KeyEvent.VK_E);
-
+        JMenu menu = menu("Edit", KeyEvent.VK_E);
         PlantUmlInputPanel input = frame.getPlantUmlPanel().getInputPanel();
-        int shortcut = Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx();
+        int mod = menuShortcut();
 
-        JMenuItem undo = new JMenuItem("Undo");
-        undo.setMnemonic(KeyEvent.VK_U);
-        undo.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_Z, shortcut));
-        undo.addActionListener(e -> input.undo());
+        JMenuItem undo = menuItem("Undo", KeyEvent.VK_U,
+                KeyStroke.getKeyStroke(KeyEvent.VK_Z, mod), e -> input.undo());
+        JMenuItem redo = menuItem("Redo", KeyEvent.VK_R,
+                KeyStroke.getKeyStroke(KeyEvent.VK_Z, mod | InputEvent.SHIFT_DOWN_MASK), e -> input.redo());
         menu.add(undo);
-
-        JMenuItem redo = new JMenuItem("Redo");
-        redo.setMnemonic(KeyEvent.VK_R);
-        redo.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_Z, shortcut | InputEvent.SHIFT_DOWN_MASK));
-        redo.addActionListener(e -> input.redo());
         menu.add(redo);
-
         menu.addSeparator();
+        menu.add(menuItem("Copy Text", KeyEvent.VK_T,
+                KeyStroke.getKeyStroke(KeyEvent.VK_C, mod), e -> input.copyToClipboard()));
+        menu.add(menuItem("Copy Image", KeyEvent.VK_I,
+                KeyStroke.getKeyStroke(KeyEvent.VK_C, mod | InputEvent.SHIFT_DOWN_MASK),
+                e -> frame.getPlantUmlPanel().copyImageToClipboard()));
+        menu.add(menuItem("Paste", KeyEvent.VK_P,
+                KeyStroke.getKeyStroke(KeyEvent.VK_V, mod), e -> input.paste()));
 
-        JMenuItem copyText = new JMenuItem("Copy Text");
-        copyText.setMnemonic(KeyEvent.VK_T);
-        copyText.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, shortcut));
-        copyText.addActionListener(e -> input.copyToClipboard());
-        menu.add(copyText);
-
-        JMenuItem copyImage = new JMenuItem("Copy Preview Image");
-        copyImage.setMnemonic(KeyEvent.VK_I);
-        copyImage.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, shortcut | InputEvent.SHIFT_DOWN_MASK));
-        copyImage.addActionListener(e -> frame.getPlantUmlPanel().copyImageToClipboard());
-        menu.add(copyImage);
-
-        JMenuItem paste = new JMenuItem("Paste");
-        paste.setMnemonic(KeyEvent.VK_P);
-        paste.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_V, shortcut));
-        paste.addActionListener(e -> input.paste());
-        menu.add(paste);
-
-        // Keep Undo/Redo enablement in sync with the editor's history.
         Runnable sync = () -> {
             undo.setEnabled(input.canUndo());
             redo.setEnabled(input.canRedo());
         };
         input.addUndoStateListener(sync);
         sync.run();
-
         return menu;
     }
 
     private static JMenu createServicesMenu(MainFrame frame) {
-        JMenu menu = new JMenu("Services");
-        menu.setMnemonic(KeyEvent.VK_V);
-        JMenuItem plantUml = new JMenuItem("PlantUML");
-        plantUml.addActionListener(e -> frame.showPanel(frame.getPlantUmlPanel()));
-        menu.add(plantUml);
-        JMenuItem csv = new JMenuItem("CSV/JSON/MD");
-        csv.addActionListener(e -> frame.showPanel(frame.getCsvPanel()));
-        menu.add(csv);
+        JMenu menu = menu("Services", KeyEvent.VK_V);
+        menu.add(menuItem("PlantUML", 0, null, e -> frame.showPanel(frame.getPlantUmlPanel())));
+        menu.add(menuItem("CSV/JSON/MD", 0, null, e -> frame.showPanel(frame.getCsvPanel())));
         return menu;
     }
 
     private static JMenu createSettingsMenu(MainFrame frame) {
-        JMenu menu = new JMenu("Settings");
-        menu.setMnemonic(KeyEvent.VK_S);
-
-        JMenu themeMenu = new JMenu("Theme");
-        themeMenu.setMnemonic(KeyEvent.VK_T);
-
-        ButtonGroup group = new ButtonGroup();
-        String currentLaf = UIManager.getLookAndFeel().getClass().getName();
-
-        for (UIManager.LookAndFeelInfo info : UIManager.getInstalledLookAndFeels()) {
-            JRadioButtonMenuItem item = new JRadioButtonMenuItem(info.getName());
-            item.setSelected(info.getClassName().equals(currentLaf));
-            item.addActionListener(e -> switchLookAndFeel(info.getClassName(), frame));
-            group.add(item);
-            themeMenu.add(item);
-        }
-
-        menu.add(themeMenu);
+        JMenu menu = menu("Settings", KeyEvent.VK_S);
+        menu.add(createThemeMenu(frame));
+        menu.add(createFontMenu(frame));
         return menu;
     }
 
-    private static void switchLookAndFeel(String className, MainFrame frame) {
-        try {
-            UIManager.setLookAndFeel(className);
-            for (Window window : Window.getWindows()) {
-                SwingUtilities.updateComponentTreeUI(window);
+    private static JMenu createThemeMenu(MainFrame frame) {
+        JMenu themeMenu = menu("Theme", KeyEvent.VK_T);
+        String currentLaf = UIManager.getLookAndFeel().getClass().getName();
+        UIManager.LookAndFeelInfo[] infos = UIManager.getInstalledLookAndFeels();
+
+        String[] names = new String[infos.length];
+        String selected = null;
+        for (int i = 0; i < infos.length; i++) {
+            names[i] = infos[i].getName();
+            if (infos[i].getClassName().equals(currentLaf)) {
+                selected = names[i];
             }
-            frame.pack();
-        } catch (Exception ex) {
-            javax.swing.JOptionPane.showMessageDialog(frame,
-                    "Failed to switch theme: " + ex.getMessage(),
-                    "Error", javax.swing.JOptionPane.ERROR_MESSAGE);
         }
+        addRadioGroup(themeMenu, Arrays.asList(names), selected, name -> {
+            for (UIManager.LookAndFeelInfo info : infos) {
+                if (info.getName().equals(name)) {
+                    applyLookAndFeel(info.getClassName(), frame);
+                    return;
+                }
+            }
+        });
+        return themeMenu;
+    }
+
+    /** Font submenu, mirroring the Theme submenu: pick a family, apply app-wide. */
+    private static JMenu createFontMenu(MainFrame frame) {
+        JMenu fontMenu = menu("Font", KeyEvent.VK_O);
+        Set<String> installed = new LinkedHashSet<>(Arrays.asList(
+                GraphicsEnvironment.getLocalGraphicsEnvironment().getAvailableFontFamilyNames()));
+        List<String> choices = FONT_CHOICES.stream()
+                .filter(f -> installed.contains(f) || isLogicalFont(f))
+                .toList();
+        String current = UIManager.getFont("Label.font").getFamily();
+        addRadioGroup(fontMenu, choices, choices.contains(current) ? current : null,
+                family -> {
+                    SwingUtils.applyFontFamily(family);
+                    frame.pack();
+                });
+        return fontMenu;
     }
 
     private static JMenu createHelpMenu(MainFrame frame) {
-        JMenu menu = new JMenu("Help");
-        menu.setMnemonic(KeyEvent.VK_H);
-        JMenuItem about = new JMenuItem("About");
-        about.setMnemonic(KeyEvent.VK_A);
-        about.addActionListener(e -> new AboutDialog(frame).setVisible(true));
-        menu.add(about);
+        JMenu menu = menu("Help", KeyEvent.VK_H);
+        menu.add(menuItem("About", KeyEvent.VK_A, null,
+                e -> new AboutDialog(frame).setVisible(true)));
         return menu;
+    }
+
+    // -------------------- helpers --------------------
+
+    private static JMenu menu(String text, int mnemonic) {
+        JMenu menu = new JMenu(text);
+        menu.setMnemonic(mnemonic);
+        return menu;
+    }
+
+    /** Adds a mutually-exclusive set of radio items, invoking {@code onSelect} on click. */
+    private static void addRadioGroup(JMenu menu, List<String> labels,
+                                      String selected, Consumer<String> onSelect) {
+        ButtonGroup group = new ButtonGroup();
+        for (String label : labels) {
+            JRadioButtonMenuItem item = new JRadioButtonMenuItem(label);
+            item.setSelected(label.equals(selected));
+            item.addActionListener(e -> onSelect.accept(label));
+            group.add(item);
+            menu.add(item);
+        }
+    }
+
+    private static boolean isLogicalFont(String family) {
+        return switch (family) {
+            case "Dialog", "DialogInput", "SansSerif", "Serif", "Monospaced" -> true;
+            default -> false;
+        };
+    }
+
+    private static void applyLookAndFeel(String className, MainFrame frame) {
+        try {
+            SwingUtils.applyLookAndFeel(className);
+            frame.pack();
+        } catch (Exception ex) {
+            SwingUtils.showError(frame, "Failed to switch theme: " + ex.getMessage());
+        }
     }
 }
